src/components/HomePage.css
.white-background {
  background-repeat: no-repeat;
  background-size: 100% 100%; /* Stretch the image */
  background-position: center center; /* Center the image */
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1;
  background: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0) 0%,
      rgba(9, 176, 163, 0.24) 100%
    ),
    linear-gradient(180deg, #031d44 0%, rgba(3, 29, 68, 0.29) 100%);
}

.gradient-background {
  background-size: 100% 100%;
  background-position: center center;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(
      180deg,
      rgba(0, 0, 0, 0) 0%,
      rgba(9, 176, 163, 0.24) 100%
    ),
    linear-gradient(180deg, #031d44 0%, rgba(3, 29, 68, 0.29) 100%);
}

.container {
  /* flex-direction: column; */
  display: flex;
  align-items: center;
  justify-content: center;
}
.buttons-container {
  justify-content: space-between;
  flex-direction: row;
  display: flex;
  align-items: center;
  width: 50%;
}

.notey-logo {
  width: 70vh;
}

.desc {
  color: #fff;
  text-align: center;
  font-size: 5.5vh;
  font-style: normal;
  font-weight: 275;
  line-height: normal;
  letter-spacing: 1.2vh;
  white-space: nowrap;
}

.sign-up-btn {
  line-height: 6.5rem; /* Set line-height equal to the button's height */
  width: 16rem;
  height: 6.5rem;
  border-radius: 3.25rem;
  background: radial-gradient(50% 50% at 50% 50%, #059f93 0%, #09b0a3 100%);
  box-shadow: 0px 0px 20px 0px #06a699;
  cursor: pointer;
  /* margin-right: 20vh; */
}

.log-in-btn {
  line-height: 6rem; /* Set line-height equal to the button's height */
  width: 15.5rem; /* Adjust the width as needed */
  height: 6rem; /* Set height equal to line-height */
  border-radius: 3.25rem; /* Adjust the border-radius as needed */
  border: 0.5vh solid #b8faf5;
  background-color: transparent; /* Add this to ensure the shadow is visible */
  box-shadow: 0px 0px 12px 0px #ddfefb,
    /* Outer shadow */ inset 0px 0px 12px 0px #ddfefb; /* Inner shadow */
  cursor: pointer;
}

.btn-text {
  color: #fff;
  text-align: center;
  font-size: 4vh;
  font-style: normal;
  position: relative; /* Add this */
  z-index: 1; /* Add this to ensure the text is on top of other elements */
}

